assets/css/main.css
/* Markdown */
:root {
    --maincolor: #a9a6ff;
  --bordercl: rebeccapurple;
  --callouctcolor: dodgerblue;
  --hovercolor: navy;
  --darkMaincolor: #50fa7b;
}

html {
  color: #232333;
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 15px;
  line-height: 1.6em;
}
body {
  display: block;
  margin: 8px;
  background-color: #f1f0ff;
}
* {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

::selection {
  background: var(--maincolor);
  color: #fff;
}

#dark-mode-toggle {
    cursor: pointer;
}

p {
  font-family: "Fira Sans", sans-serif;
  line-height: 1.5;
}

hr {
  border: 0;
  border-top: 3px dotted var(--bordercl);
  margin: 1em 0;
}

blockquote {
  border-left: 3px solid var(--bordercl);
  color: #737373;
  margin: 0;
  padding-left: 1em;
}

a {
  border-bottom: 3px solid var(--maincolor);
  color: inherit;
  text-decoration: none;
}
a:hover {
  background-color: var(--hovercolor);
  color: #fff;
}

ul {
  list-style: none;
  padding-left: 2ch;
}
ul li {
  text-indent: -2ch;
}
ul > li::before {
  content: "* ";
  font-weight: bold;
}

/* Images */
img {
  border: 3px solid #ececec;
  max-width: 100%;
}

figure {
  box-sizing: border-box;
  display: inline-block;
  margin: 0;
  max-width: 100%;
}

figure img {
  max-height: 500px;
}

@media screen and (min-width: 600px) {
  figure {
    padding: 0 40px;
  }
}

figure h4 {
  font-size: 1rem;
  margin: 0;
  margin-bottom: 1em;
}
figure h4::before {
  content: "↳ ";
}

/* Code blocks */
code {
  background-color: #f1f1f1;
  padding: 0.1em 0.2em;
}

pre {
  background-color: #ececec;
  line-height: 1.4;
  overflow-x: auto;
  padding: 1em;
}

.highlight pre ::selection {
  background: rgba(255, 255, 255, 0.2);
  color: inherit;
}

pre code {
  background-color: transparent;
  color: inherit;
  font-size: 100%;
  padding: 0;
}

/* Containers */
.content {
  margin-bottom: 4em;
  margin-left: auto;
  margin-right: auto;
  max-width: 800px;
  word-wrap: break-word;
  background-color: white;
  padding: 0.25rem 1.5rem;
  border-radius: 1.25rem
}

/* Header */
header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 1em 0;
  line-height: 2.5em;
}

header .main {
  font-size: 1.5rem;
  font-weight: 600;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: 1.2rem;
  margin-top: 2em;
}

h1::before {
  color: var(--maincolor);
  content: "# ";
}
h2::before {
  color: var(--maincolor);
  content: "## ";
}
h3::before {
  color: var(--maincolor);
  content: "### ";
}
h4::before {
  color: var(--maincolor);
  content: "#### ";
}
h5::before {
  color: var(--maincolor);
  content: "##### ";
}
h6::before {
  color: var(--maincolor);
  content: "###### ";
}

.meta {
  color: #999;
  letter-spacing: -0.5px;
}

/* Footer */
footer {
  display: flex;
  align-items: center;
  padding: 2rem 0rem;
  margin-top: 2rem;

  justify-content: space-between;
}
.soc {
  display: flex;
  align-items: center;
  border-bottom: none;
}
.border {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  border: 1px solid;
}
.footer-info {
  padding: var(--footer-padding);
}

/* Common */
.title h1 {
  margin-bottom: 0;
}

time {
  color: grey;
}

/* Posts */
article .title {
  margin-bottom: 0!important;
}

/* Callout */
.callout {
  background-color: var(--callouctcolor);
  color: #fff;
  padding: 1em;
}

.callout p {
  font-family: "IBM Plex Mono", monospace;
  margin: 0;
}

.callout a {
  border-bottom: 3px solid #fff;
}

.callout a:hover {
  background-color: #fff;
  color: var(--callouctcolor);
}

.site-description {
  display: flex;
  justify-content: space-between;
}
.tags li::before {
  content: "🏷 ";
}
.tags a {
  border-bottom: 3px solid var(--maincolor);
}
.tags a:hover {
  color: white;
  background-color: var(--hovercolor);
}
svg {
  max-height: 15px;
}
.soc:hover {
  color: white;
}
.draft-label {
  color: var(--bordercl);
  text-decoration: none;
  padding: 2px 4px;
  border-radius: 4px;
  margin-left: 6px;
  background-color: #f9f2f4;
}
.highlight {
  position: relative;
  -webkit-overflow-scrolling: touch;
}
.highlight pre code[class*="language-"] {
  -webkit-overflow-scrolling: touch;
}
.highlight pre code[class*="language-"]::before {
  background: black;
  border-radius: 0 0 0.25rem 0.25rem;
  color: white;
  font-size: 12px;
  letter-spacing: 0.025rem;
  padding: 0.1rem 0.5rem;
  position: absolute;
  right: 1rem;
  text-align: right;
  text-transform: uppercase;
  top: 0;
}

.highlight pre code[class="language-javaScript"]::before,
.highlight pre code[class="language-js"]::before {
  content: "js";
  background: #f7df1e;
  color: black;
}
.highlight pre code[class*="language-yml"]::before,
.highlight pre code[class*="language-yaml"]::before {
  content: "yaml";
  background: #f71e6a;
  color: white;
}
.highlight pre code[class*="language-shell"]::before,
.highlight pre code[class*="language-bash"]::before,
.highlight pre code[class*="language-sh"]::before {
  content: "shell";
  background: green;
  color: white;
}
.highlight pre code[class*="language-json"]::before {
  content: "json";
  background: dodgerblue;
  color: #000000;
}
.highlight pre code[class*="language-python"]::before,
.highlight pre code[class*="language-py"]::before {
  content: "py";
  background: blue;
  color: yellow;
}
.highlight pre code[class*="language-css"]::before {
  content: "css";
  background: cyan;
  color: black;
}
.highlight pre code[class*="language-go"]::before {
  content: "Go";
  background: cyan;
  color: royalblue;
}
.highlight pre code[class*="language-md"]::before,
.highlight pre code[class*="language-md"]::before {
  content: "Markdown";
  background: royalblue;
  color: whitesmoke;
}

/* table */
table {
  border-spacing: 0;
  border-collapse: collapse;
}

table th {
  padding: 6px 13px;
  border: 1px solid #dfe2e5;
  font-size: large;
}

table td {
  padding: 6px 13px;
  border: 1px solid #dfe2e5;
}

/* Info */
.info-section {
  display: flex;
}

.info-group {
  flex-grow: 1;
}

.info-group h2 {
  margin-top: 0;
}

.list-with-padding {
  padding-bottom: 1.5rem;
}

@media screen and (max-width: 480px) {
  .info-section {
    flex-direction: column;
  }
}

/* Project */

.project-container {
  display: grid;
  grid-template-rows: repeat(auto-fill, minmax(280px, 1fr));
  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
  grid-gap: 0 1.5rem;
  padding-left: 0;
}

.project-container-list {
  display:flex;
  flex-direction: column;
}

.project {
  display: flex;
  flex-direction: column;
  margin-bottom: 2rem;
  border-radius: 1rem;
  box-shadow: 0px 4px 17px 0px #00000012;
  transition: transform 0.3s ease-in-out;
}

.project .nav.tags {
  margin-top: 1rem;
  margin-bottom: 1rem;
  display: flex;
  flex-wrap: wrap;
  gap: 4px;
}

.project-container-list .project {
  flex-direction: row;
}

.project:hover {
  transform: scale(1.02);
}

.project img {
  width: 100%;
  border: 0;
  border-radius: 1rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  height: 250px;
  object-fit: cover;
}


.project-container-list .project img {
  width: 100%;
  border: 0;
  border-radius: 1rem;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  max-width: 300px;
  height: auto;
}

.project .project-meta {
  padding: 0 1rem 0.5rem 1rem;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.m-0 {
  margin: 0!important;
}

.project .project-meta h2 {
  margin-top: 15px;
}

.project-container-list .project .project-meta h2 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}


.project .project-meta p {
  margin: 0;
}

/* TODO: Projects List Responsive */
@media screen and (min-width: 680px) {

}

